--- a/pages/login_and_signup.html
+++ b/pages/login_and_signup.html
@@ -48,20 +48,20 @@
                             <input type="text" placeholder="E-mail" id="email" required>
                         </div>
                         <div class="field">
-                            <input type="password" placeholder="Contraseña" id="password">
+                            <input type="password" placeholder="Contraseña" id="password" required>
                         </div>
                         <div class="pass-link"><a href="#">¿Te olvidaste la contraseña?</a></div>
                         <div class="field">
                             <input type="submit" value="Iniciar sesión">
                         </div>
-                        <div id="result" class="signup-link">¿No eres usuario? <a href="#">Registrate ahora</a></div>
+                        <div class="signup-link">¿No eres usuario? <a href="#">Registrate ahora</a></div>
                     </form>
                     <form  onsubmit="signup()" class="signup">
                         <div class="field">
                             <input type="text" placeholder="E-mail" id="correo" required>
                         </div>
                         <div class="field">
-                            <input type="password" placeholder="Contraseña" id="contrasenha" required>
+                            <input type="password" placeholder="Contraseña" id="contraseña" required>
                         </div>
                         <div class="field">
                             <input type="password" placeholder="Confirme su contraseña" required>
