--- a/pages/login_and_signup.html
+++ b/pages/login_and_signup.html
@@ -43,20 +43,20 @@
                     <div class="slide-tab"></div>
                 </div>
                 <div class="form-inner">
-                    <form onsubmit="loginFunc()" action="#" class="login" id="login">
+                    <form action="#" class="login" id="login">
                         <div class="field">
-                            <input type="text" placeholder="Nombre de usuario" id="username" required>
+                            <input type="text" placeholder="E-mail" id="email" required>
                         </div>
                         <div class="field">
                             <input type="password" placeholder="Contraseña" id="password" required>
                         </div>
                         <div class="pass-link"><a href="#">¿Te olvidaste la contraseña?</a></div>
                         <div class="field">
-                            <input type="submit" value="Iniciar sesión">
+                            <button type="submit" id="iniciarSesion" value="Iniciar sesión">Iniciar sesión</button>
                         </div>
                         <div class="signup-link">¿No eres usuario? <a href="#">Registrate ahora</a></div>
                     </form>
-                    <form  onsubmit="signup()" class="signup" id="signup">
+                    <form class="signup" id="signup">
                         <div class="field">
                             <input type="text" placeholder="E-mail" id="correo" required>
                         </div>
@@ -67,7 +67,7 @@
                             <input type="password" placeholder="Contraseña" id="contraseña" required>
                         </div>
                         <div class="field">
-                            <input type="submit" value="Crear cuenta">
+                            <button id="enviarEmail" type="submit" value="Crear cuenta">Crear cuenta</button>
                         </div>
                     </form>
                 </div>
@@ -108,7 +108,7 @@
 
     <footer class="text-center text-lg-start mt-0" style="background-color: #FDF6F0;">
         <div class="container d-flex justify-content-center pt-4">
-            <h5 style="color: #594a41c5">Redes sociales</h5>
+            <h5 class="redesSociales" style="color: #594a41c5">Redes sociales</h5>
         </div>
         <div class="container d-flex justify-content-center pt-3 pb-5">
             <a class="btn btn-primary btn-floating mx-2" href="https://www.facebook.com/" target="_blank" role="button" style="background-color: #594a41d7; border-color: #fff;">
@@ -133,8 +133,10 @@
 
 
     <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
-    <script src="../js/login.js"></script>
-
+    <script src="../js/main.js" type="module"></script>
+    <script src="../js/paginapago.js" type="module"></script>
+    <script src="../js/login.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </body>
 </html>
